...
@Composable
fun InfoSection(profile: Profile, tagsViewModel: TagsViewModel) {
  val userTags =
      profile.tags.map { tagString -> Pair(tagString, tagsViewModel.tagToColor(tagString)) }

  Column(
      modifier = Modifier.fillMaxWidth().padding(INFO_SECTION_PADDING).testTag("infoSection"),
      verticalArrangement = Arrangement.spacedBy(INFO_SECTION_SPACING, Alignment.Top),
      horizontalAlignment = Alignment.Start) {
        // Catchphrase Section
        ProfileCatchPhrase(profile.catchPhrase)

        // Description Section
...

  Box(
      modifier =
          Modifier.fillMaxWidth()
              .aspectRatio(PROFILE_IMAGE_ASPECT_RATIO)
              .background(Color.LightGray)
              .testTag("profileHeader")) {

        // Profile image
        AsyncImage(
            model = profile.profilePictureUrl,
            contentDescription = "Profile Image",
            contentScale = ContentScale.Crop,
            modifier =
                Modifier.fillMaxSize()
                    .background(MaterialTheme.colorScheme.surfaceVariant, CircleShape)
                    .testTag("profilePicture"),
            placeholder = painterResource(id = R.drawable.nopp),
            error = painterResource(id = R.drawable.nopp))

        // Back button
        IconButton(
            onClick = { navigationActions.goBack() },
            modifier =
                Modifier.align(Alignment.TopStart)
                    .padding(PROFILE_IMAGE_PADDING)
                    .background(BUTTON_BG_GRADIENT, shape = CircleShape)
                    .testTag("goBackButton")) {
              Icon(
                  imageVector = Icons.AutoMirrored.Filled.ArrowBack,
                  contentDescription = "Go Back",
                  tint = Color.White)
            }

...
                      .size(REQUEST_BUTTON_SIZE),
              contentAlignment = Alignment.Center) {
                IconButton(
                    onClick = { blockReportModal = true },
                    modifier =
                        Modifier.background(BUTTON_BG_GRADIENT, shape = CircleShape)
                            .testTag("flagButton")) {
                      Icon(
                          painter = painterResource(id = R.drawable.flag),
                          contentDescription = "report/block user",
                          tint = Color.Red,
                          modifier = Modifier.fillMaxSize(FLAG_BUTTON_WRAP))
                    }
...
        }

        // Edit Button or message button
        if (!profileInNotification) {
          val buttonIcon = if (myProfile) Icons.Filled.Create else Icons.AutoMirrored.Filled.Send
          val buttonDescription = if (myProfile) "Edit Profile" else "Send Request"
          val buttonTag = if (myProfile) "editButton" else "requestButton"
          Box(
              modifier =
                  Modifier.align(Alignment.BottomEnd)
                      .padding(PADDING_STANDARD)
                      .size(REQUEST_BUTTON_SIZE)
                      .shadow(REQUEST_BUTTON_ELEVATION, shape = CircleShape)
...
              Text(
                  text = profile.name,
                  style = USERNAME_TEXT_STYLE,
                  modifier =
                      Modifier.align(Alignment.CenterStart)
                          .padding(horizontal = PADDING_STANDARD)
                          .testTag("username"))
            }
      }

  if (blockReportModal) {
    val configuration = LocalConfiguration.current
    val screenWidth = configuration.screenWidthDp.dp
...
          showBlockConfirmation = false
        }) {
          Card(
              modifier =
                  Modifier.widthIn(max = maxWidth)
                      .padding(PADDING_STANDARD)
                      .testTag("alertDialogReportBlock")) {
                Column(
                    modifier = Modifier.padding(PADDING_LARGE),
                    verticalArrangement = Arrangement.spacedBy(PADDING_SMALL)) {
                      Text(
                          text = stringResource(R.string.block_report_modal_title),
                          style = MaterialTheme.typography.titleLarge,
...
                                                selectedReportType?.displayName),
                                            Toast.LENGTH_SHORT)
                                        .show()
                                    selectedReportType = null
                                  },
                                  enabled = selectedReportType != null) {
                                    Text("Report")
                                  }
                            }
                      } else if (showBlockConfirmation) {
                        Row(
                            modifier = Modifier.fillMaxWidth(),
                            horizontalArrangement = Arrangement.SpaceBetween,
...
      text = "«${catchPhrase}»",
      style = CATCHPHRASE_TEXT_STYLE,
      color = MaterialTheme.colorScheme.onSecondary,
      textAlign = TextAlign.Left,
      maxLines = 2,
      overflow = TextOverflow.Ellipsis,
      modifier = Modifier.testTag("catchPhrase"))
}

/**
 * Displays the profile's tags
 *
 * @param listOfTags the list of the profile's tags
 */
@Composable
fun TagsSection(listOfTags: List<Pair<String, Color>>) {
  Box(modifier = Modifier.fillMaxWidth().testTag("tagSection")) {
    RowOfTags(listOfTags, TagStyle())
  }
}

/**
 * Displays the profile's description
...
@Composable
fun ProfileDescription(description: String) {
  Text(
      text = description,
      style = CONTENT_TEXT_STYLE,
      color = MaterialTheme.colorScheme.onSecondary,
      modifier = Modifier.padding(vertical = DESCRIPTION_PADDING).testTag("profileDescription"))
}

@Composable
fun MessageWhenLoadingProfile(paddingValues: PaddingValues) {
  Box(
      modifier =
...
