...
  }

  val isLoading = profilesViewModel.loading.collectAsState(initial = true).value
  val profile = profilesViewModel.selectedProfile.collectAsState().value
  val aiState = aiViewModel.uiState.collectAsState().value

  Scaffold(modifier = Modifier.fillMaxSize().testTag("aroundYouProfileScreen")) { paddingValues ->
    if (isLoading) {
      MessageWhenLoadingProfile(paddingValues)
    } else if (profile != null) {
      Column(
          modifier = Modifier.fillMaxWidth().padding(paddingValues),
          horizontalAlignment = Alignment.CenterHorizontally) {
...
                      ButtonDefaults.buttonColors(
                          containerColor = MaterialTheme.colorScheme.primary),
                  modifier =
                      Modifier.fillMaxWidth()
                          .padding(horizontal = BUTTONS_HORIZONTAL_PADDING)
                          .align(Alignment.CenterHorizontally)
                          .testTag("aiButton")) {
                    Row(
                        modifier = Modifier.fillMaxWidth(),
                        horizontalArrangement = Arrangement.Center,
                        verticalAlignment = Alignment.CenterVertically) {
                          Text(
                              text = stringResource(R.string.AI_button),
...
      if (sendRequest) {
        Box(
            modifier =
                Modifier.fillMaxSize()
                    .background(Color.Black.copy(alpha = ALPHA))
                    .clickable {}
                    .testTag("bluredBackground"),
            contentAlignment = Alignment.Center) {
              SendRequestScreen(
                  onValueChange = {
                    writtenMessage = it.slice(0..minOf(it.length - 1, MESSAGE_MAX_SIZE))
                  },
                  value = writtenMessage,
...
  val sheetState = rememberModalBottomSheetState(skipPartiallyExpanded = true)
  val clipboardManager = LocalClipboardManager.current

  ModalBottomSheet(
      sheetState = sheetState,
      onDismissRequest = onDismissRequest,
      modifier = Modifier.testTag("aiBottomSheet")) {
        Column(
            modifier =
                Modifier.fillMaxWidth()
                    .heightIn(min = MIN_SHEET_HEIGHT)
                    .padding(SHEET_INNER_PADDING),
            verticalArrangement = Arrangement.Top,
...
                is AiViewModel.UiState.Success -> {
                  Text(
                      text = "«${aiState.data}»",
                      fontWeight = FontWeight.Normal,
                      fontSize = TextUnit(CONTENT_FONT_SIZE, TextUnitType.Sp),
                      lineHeight = TextUnit(CONTENT_LINE_HEIGHT, TextUnitType.Sp),
                      modifier = Modifier.testTag("aiResponse"))

                  Spacer(modifier = Modifier.height(AI_OPTIONS_TOP_SPACING))

                  Row(
                      horizontalArrangement = Arrangement.Center,
                      modifier = Modifier.fillMaxWidth()) {
                        Button(
                            onClick = onAiRetry,
                            elevation = ButtonDefaults.buttonElevation(BUTTONS_ELEVATION),
                            modifier = Modifier.testTag("aiRetry")) {
                              Icon(
                                  imageVector = Icons.Filled.Refresh,
                                  contentDescription = stringResource(R.string.ai_retry))
                            }

                        Spacer(modifier = Modifier.width(AI_OPTIONS_SPACING))

                        Button(
                            onClick = { clipboardManager.setText(AnnotatedString(aiState.data)) },
                            elevation = ButtonDefaults.buttonElevation(BUTTONS_ELEVATION),
                            modifier = Modifier.testTag("aiCopy")) {
                              Icon(
                                  painter = painterResource(id = R.drawable.copy_icon),
                                  contentDescription = stringResource(R.string.ai_copy))
                            }
                      }
                }
...
                is AiViewModel.UiState.Error -> {
                  Text(
                      text = "\"${aiState.message}\"",
                      fontWeight = FontWeight.Normal,
                      fontSize = TextUnit(CONTENT_FONT_SIZE, TextUnitType.Sp),
                      lineHeight = TextUnit(CONTENT_LINE_HEIGHT, TextUnitType.Sp),
                      modifier = Modifier.testTag("aiError"))
                }
                else -> {
                  Text(
                      text = "An unknown error occurred",
                      fontWeight = FontWeight.Normal,
                      fontSize = TextUnit(CONTENT_FONT_SIZE, TextUnitType.Sp),
...
