...
    <string name="around_you_screen_title">Around You</string>

    <string name="more_tags">...</string>
    <string name="preview_profile">Tap to preview profile</string>

    <string name="block_report_modal_title">What would you like to do?</string>
    <string name="block_confirmation_message">Do you really want to block this user?</string>
    <string name="report_reason_prompt">Select a reason for reporting:</string>
    <string name="report_success_message">User successfully reported for: %1$s</string>
    <string name="block_success_message">User blocked successfully</string>

    <string name="block">Block</string>
    <string name="report">Report</string>
    <string name="cancel">Cancel</string>
    <string name="block_yes">Yes</string>
    <string name="block_no">No</string>

    <string name="no_blocked_users">You have not blocked any users!</string>
    <string name="unblock_button">See blocked users</string>
    <string name="unblock_confirm">Unblock ?</string>
...
